--- a/app/src/main/res/layout-land/fragment_main.xml
+++ b/app/src/main/res/layout-land/fragment_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.5"
         android:gravity="center"
+        android:textSize="30sp"
         android:text="Welcome to the game"/>
 
     <LinearLayout
@@ -24,6 +25,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="25sp"
+            android:layout_marginEnd="8dp"
             android:text="Play Game"/>
 
         <Button
@@ -31,6 +34,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="25sp"
             android:text="View HighScores"/>
     </LinearLayout>
 
