--- a/app/src/main/res/layout/fragment_highscore.xml
+++ b/app/src/main/res/layout/fragment_highscore.xml
@@ -8,8 +8,12 @@
         android:id="@+id/noScoresTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
         android:text="No high scores yet."
+        android:textSize="24sp"
         android:visibility="visible" />
 
     <androidx.recyclerview.widget.RecyclerView
