--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:textSize="30sp"
         android:gravity="center"
         android:text="Welcome to the game"/>
 
@@ -17,6 +18,7 @@
         android:id="@+id/playGameButton"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:textSize="28sp"
         android:layout_weight="1"
         android:text="Play Game"/>
 
@@ -24,6 +26,7 @@
         android:id="@+id/viewHighScoresButton"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:textSize="28sp"
         android:layout_weight="1"
         android:text="View HighScores"/>
 
