--- a/app/src/main/res/layout/item_highscore.xml
+++ b/app/src/main/res/layout/item_highscore.xml
@@ -22,10 +22,13 @@
 
     <ImageButton
         android:id="@+id/deleteScoreButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+    android:layout_height="24dp"
+    android:src="@drawable/ic_delete_icon"
+    android:scaleType="centerInside"
+    android:background="?android:attr/selectableItemBackground"
+    android:contentDescription="Delete" />
 
-        android:background="?android:attr/selectableItemBackground"
-        android:contentDescription="Delete" />
+
 
 </LinearLayout>
